2006-08-25  Fariborz Jahanian  <fjahanian@apple.com>

PR c/28418
	* c-gimplify.c (gimplify_compound_literal_expr): Don't add
	variable again if DECL_SEEN_IN_BIND_EXPR_P.

2006-08-25  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.c-torture/compile/compound-literal-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116436 138bc75d-0d04-0410-961f-82ee72b054a4